package tokenize;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();

}
