@startuml
'https://plantuml.com/class-diagram

interface Tokenize{
    List<String> tokenize();

}
abstract class TokenDecorator
class Tachtu{
    String s
}
class RemoveStopword{
    #List<String> stopwords
}

TokenDecorator<|-- RemoveStopword
TokenDecorator<|-- RemovePunc
TokenDecorator ---> Tokenize:token
Tokenize<|.. Tachtu
Tokenize<|... TokenDecorator

@enduml